[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "proyectomateria"
version = "0.1.0"
description = "nada estamos probando a ver como aparece"
readme = "README.rst"
authors = [
  {name = "sabrinaprobando", email = "sabrinafvillegaso@gmail.com"}
]
maintainers = [
  {name = "sabrinaprobando", email = "sabrinafvillegaso@gmail.com"}
]
classifiers = [

]
license = {text = "MIT license"}
dependencies = [
  
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/sfvillegas/proyectomateria/issues"
changelog = "https://github.com/sfvillegas/proyectomateria/blob/master/changelog.md"
homepage = "https://github.com/sfvillegas/proyectomateria"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

